Fix nav spacing, add container class to template blog

--- a/styles/main.css
+++ b/styles/main.css
@@ -109,6 +109,7 @@ figcaption {
   flex-direction: row;
   justify-content: space-between;
   margin-top: 20px;
+  width: 100%;
 }
 
 .nav {
